[package]
name = "howdy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Too heavy to compile on a 16GB linux laptop...
# dlib-face-recognition = "0.2.2"
pixels = "0.9.0"
v4l = "0.13.0"
winit = "0.27.3"
